injeção de dependencia

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
         "name": "weather_app",
         "request": "launch",
         "type": "dart",
-        "flutterMode": "profile"
+        "flutterMode": "debug"
     }
 ]
 }
